# vcgj-2025

./: .gitignore  ASSETS_LICENSE.md  CMakeLists.txt  Makefile  README.md  actions.h  cover-image-itch.io.kra  map.h  nuklear-cfg.h  nuklear.c  nuklear_sdl3_gl3.h  nuklear_sdl3_gles2.h  physics.c  script.c  shell.html
blender/: camera_tform_logic.blend  camera_tform_logic.blend1  carrot.blend  carrot.blend1  carrot.glb  hay.blend  hay.blend1  hay.glb  horse.glb  player.blend  player.blend1  player.glb  player2.blend  player2.blend1  player2_tex.blend  player2_tex.blend1  player2_tex_walk_changes.blend  player2_tex_walk_changes.blend1  test_model_1.blend  test_model_1.blend1  test_model_1.glb  test_model_1_no_apply_mesh.blend  test_model_2.blend  test_model_2.blend1  test_model_2.glb
engine/: alloc.h  main.c  model.c  model.h  our_gl.h  shader.c  shader.h  skeletal_mesh.c  skeletal_mesh.h  stb_image.c  types.h
engine/serialize/: serialize.c  serialize.h  serialize_skm.h  skm_serialize.c
glad/include/glad/: glad.h
glad/src/: glad.c
glad_gles2/include/glad/: glad.h
glad_gles2/src/: glad.c
shader/: pbr.fs  skel-frag.glsl  skel-vert.glsl  static-frag.glsl  static-vert.glsl
sounds/: boing.aup3-shm  boing.aup3-wal  chomp.aup3-shm  chomp.aup3-wal
tool/: shader2c.c
